// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cookbook: container-view-multiple-software-systems - explicit include > generates expected DSL 1`] = `
"workspace "undefined" {
  model {
    // Elements
    softwareSystem_1 = softwareSystem "Software System 1" {
      tags "Element" "Software System"
      container_1 = container "Container 1" {
        tags "Element" "Container"
      }
    }
    softwareSystem_2 = softwareSystem "Software System 2" {
      tags "Element" "Software System"
      container_2 = container "Container 2" {
        tags "Element" "Container"
      }
    }
    // Relationships
    container_1 -> container_2 "uses" {
      tags "Relationship"
    }
  }
  views {
    // System Landscape Views
    // System Context Views
    // Container Views
    container "softwareSystem_1" "Containers" {
      description "undefined"
      include container_1
      include container_2
      autoLayout lr
    }
    // Component Views
  }
}
"
`;

exports[`cookbook: container-view-multiple-software-systems - include all > generates expected DSL 1`] = `
"workspace "undefined" {
  model {
    // Elements
    softwareSystem_1 = softwareSystem "Software System 1" {
      tags "Element" "Software System"
      container_1 = container "Container 1" {
        tags "Element" "Container"
      }
    }
    softwareSystem_2 = softwareSystem "Software System 2" {
      tags "Element" "Software System"
      container_2 = container "Container 2" {
        tags "Element" "Container"
      }
    }
    // Relationships
    container_1 -> container_2 "uses" {
      tags "Relationship"
    }
  }
  views {
    // System Landscape Views
    // System Context Views
    // Container Views
    container "softwareSystem_1" "Containers" {
      description "undefined"
      include *
      autoLayout lr
    }
    // Component Views
  }
}
"
`;
